# parallel-hpc

./: .gitignore  CMakeLists.txt
barriers/: dice_game_with_posix_barriers.c  multi_stage_pipeline_simulation.c  multiplayer_game_lobby_synchronization.c  wheather_data_collection_system.c
cuda/: Armen_Ghazaryan_CUDA_basics.ipynb
openmp/: delivery_priority_update.c  fibonacci.c  global_minimum_distance.c  parallel_filtered_sum.c  parallel_histogram_with_reduction.c  parallel_log_processing.c
pointers-memory-allocation/: array_of_pointers.c  basics_of_pointers.c  dynamic_memory_allocation_with_pointers.c  pointer_arithmetic.c  pointers_and_functions.c  pointers_to_pointers.c  string_manipulation_with_pointers.c
simd/: big.ppm  character_buffer_processing.c  dna_nucleotide_statistics.c  gray_output.ppm  grayscale_image_conversion.c
threads-basics/: basic_thread_creation.c  cpu_core_exploration.c  parallel_array_sum.c  parallel_maximum_search.c  parallel_prime_counting.c
